--- a/_scss/site.scss
+++ b/_scss/site.scss
@@ -6,7 +6,7 @@ html {
     background-color: #111010;
     color: white;
     line-height: 24px;
-    padding: 5px;
+    padding: 5px 20px;
 }
 
 body {  
